# transcoder

./: .gitignore  CMakeLists.txt  README.md  audio.sdp  main.cpp  test_2.sdp
script/: audio.sh  client.sh  client_2.8.sh  local_rtp.sh  stream.sh
